Attempt to fix alignment on mobile

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -135,4 +135,5 @@ tr:hover {
     font-size: 2rem;
     font-family: none;
     color: $dark;
+    align-items: center;
 }
